# parse-stortingsrepresentantenes-verv-og-konomiske-interesser

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: sync.yml
docs/: org-matching-design.md
src/stortinget_register/: __init__.py  checkpoint.py  cli.py  config.py  discovery.py  downloader.py  manifest.py  schema.py  storage.py  stortinget_api.py
