[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stortinget-register"
dynamic = ["version"]
description = "Mirror of Stortinget economic interests register PDFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Sondre" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "tenacity>=8.2,<10",
    "pyarrow>=15,<20",
    "fsspec>=2024.2",
    "typer[all]>=0.12,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "rich>=13,<14",
    "structlog>=24,<26",
]

[project.optional-dependencies]
s3 = ["s3fs>=2024.2"]
gcs = ["gcsfs>=2024.2"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "aioresponses>=0.7",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
stortinget-register = "stortinget_register.cli:app"

[tool.hatch.version]
path = "src/stortinget_register/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/stortinget_register"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/stortinget_register/cli.py" = ["B008"]
"tests/*" = ["TCH003"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
